modify class group in Lesson2

--- a/Lesson2/myPtrListGroup/myLib/group/group.H.org
+++ b/Lesson2/myPtrListGroup/myLib/group/group.H.org
@@ -11,12 +11,11 @@
 namespace Foam
 {
 class group
-:
-    public  PtrList<myLib>
 {
     private:
         const fvMesh& mesh_;
         IOdictionary dict_;
+        PtrList<myLib> group_;
 
     public:
 
